--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h2>Paris, France</h2>
 	<h3>Constructed 1887-1889</h3>
 
-	<img src="http://bit.ly/1UuWAmt", width="320" height="400" alt="La Tour Eiffel">
+	<img src="tour_eiffel.jpg", width="320" height="400" alt="La Tour Eiffel">
 
 </body>
 </html>
